feat: add R2 attachment foundation
